--- a/About.html
+++ b/About.html
@@ -132,7 +132,7 @@
                 </div>
                 <h3 class="member-name">李佳浩</h3>
                 <p class="member-role">项目经理 & 内容编写</p>
-                <a href="李佳浩个人简介.html" class="resume-link">查看简历</a>
+                <a href="../FlowerC/李佳浩简介设计1/李佳浩个人简介.html" class="resume-link">查看简历</a>
             </div>
             
             <div class="team-member">
