--- a/denglu.html
+++ b/denglu.html
@@ -177,6 +177,6 @@
             document.getElementById('flipCard').classList.toggle('flipped');
         }
     </script>
-    <script src=""></script>
+    <script src="userSystem.js"></script>
 </body>
 </html>
