--- a/About.html
+++ b/About.html
@@ -150,7 +150,7 @@
                 </div>
                 <h3 class="member-name">常如意</h3>
                 <p class="member-role">UI/内容设计师</p>
-                <a href="resume_chang.html" class="resume-link">查看简历</a>
+                <a href="../FlowerC/常如意个人简介/常如意简历.html" class="resume-link">查看简历</a>
             </div>
             
             
