--- a/python学习网站/denglu.html
+++ b/python学习网站/denglu.html
@@ -204,6 +204,6 @@
             document.getElementById('flipCard').classList.toggle('flipped');
         }
     </script>
-    <script src=""></script>
+    <script src="userSystem.js"></script>
 </body>
 </html>
