--- a/Python学习网站第一版/python学习网站/start.html
+++ b/Python学习网站第一版/python学习网站/start.html
@@ -107,10 +107,10 @@
     
     <div class="menu">
         <ul>
-            <li><a href="开始\examine.html" class="btn-retro">考核</a></li>
-            <li><a href="开始\bookstructures.html" class="btn-retro">课程</a></li>
-            <li><a href="开始\boss.html" class="btn-retro">boss</a></li>
-            <li><a href="开始\practice.html" class="btn-retro">练习</a></li>
+            <li><a href="开始/examine.html" class="btn-retro">考核</a></li>
+            <li><a href="开始/bookstructures.html" class="btn-retro">课程</a></li>
+            <li><a href="开始/boss.html" class="btn-retro">boss</a></li>
+            <li><a href="开始/practice.html" class="btn-retro">练习</a></li>
             <li>
                 <img id="speaker" onclick="play_music()" style="width: 40px; height: 40px;" src="像素城市霓虹动图.gif" alt="音乐控制">
             </li>
