加了鼠标还有修改了音乐播放bug

--- a/Python学习网站第一版/python学习网站/denglu.html
+++ b/Python学习网站第一版/python学习网站/denglu.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <title>用户登录</title>
+     <link rel="stylesheet" href="../css/mouse.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <style>
@@ -204,5 +205,6 @@
     </script>
     
     <script src="userSystem.js"></script>
+    <script src="../js/mouse.js"></script>
 </body>
 </html>
