--- a/Python学习网站第一版/python学习网站/work.html
+++ b/Python学习网站第一版/python学习网站/work.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/back_button.css">
+         <link rel="stylesheet" href="../css/mouse.css">
         <style>
             body, html {
                 margin: 0;
@@ -161,5 +162,6 @@
         </audio>
         
         <script src="js/menu.js" defer></script>
+        <script src="../js/mouse.js"></script>
     </body>
 </html>
