--- a/Python学习网站第一版/python学习网站/menu.html
+++ b/Python学习网站第一版/python学习网站/menu.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pixelart 菜单</title>
     
-    <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="../css/back_button.css">
-    <link rel="stylesheet" href="../css/mouse.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/back_button.css">
+    <link rel="stylesheet" href="./css/mouse.css">
     <style>
 
         body {
@@ -120,13 +120,13 @@
     </div>
 
     <audio id="music-player" loop>
-        <source src="浅夏晴空-玖九9#2CUNJ4.mp3" type="audio/mpeg">
+        <source src="浅夏晴空-玖九.mp3" type="audio/mpeg">
         您的浏览器不支持音频元素。
     </audio>
 
-    <script src="../js/menu.js"></script>
-    <script src="../js/index.js"></script>
-    <script src="../js/mouse.js"></script>
+    <script src="./js/menu.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/mouse.js"></script>
    <script>
         function play_music() {
             const player = document.getElementById('music-player');
