--- a/Python学习网站第一版/python学习网站/开始/boss.html
+++ b/Python学习网站第一版/python学习网站/开始/boss.html
@@ -6,7 +6,7 @@
     <title>Boss--愤怒之湖--暴鲤龙</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+   
     <style>
         /* Boss战专属样式 */
         .boss-container {
@@ -568,6 +568,33 @@
             font-family: 'Courier New', monospace;
         }
 
+        /* 本地视频样式 */
+.victory-video {
+    width: 800px;
+    height: 450px;
+    max-width: 90vw;
+    max-height: 50vh;
+    border: 3px solid #ffd700;
+    border-radius: 10px;
+    background: #000;
+    display: none; /* 初始隐藏 */
+}
+
+.loading-message {
+    color: #ffd700;
+    font-size: 18px;
+    text-align: center;
+    padding: 30px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+}
+
+.video-controls {
+    margin-top: 15px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
         /* 捷拉奥拉攻击动画 */
 /* 修复后的攻击动画 */
 .hero-attack {
@@ -592,44 +619,41 @@
     animation: attackMove 1.5s ease-in-out forwards;
 }
 
-@keyframes flashAppear {
+/* 全宽度横条展开动画 */
+@keyframes fullWidthExpand {
     0% {
+        clip-path: inset(0 50% 0 50%); /* 从中间一条线开始 */
         opacity: 0;
-        filter: brightness(0.5);
+        filter: brightness(0.3);
     }
-    25% {
-        opacity: 1;
-        filter: brightness(2);
-    }
-    50% {
-        opacity: 1;
+    30% {
+        clip-path: inset(0 30% 0 30%);
+        opacity: 0.8;
         filter: brightness(1.5);
     }
-    75% {
+    60% {
+        clip-path: inset(0 10% 0 10%);
         opacity: 1;
-        filter: brightness(2);
+        filter: brightness(1.8);
     }
     100% {
+        clip-path: inset(0 0 0 0); /* 完全展开到全屏宽度 */
         opacity: 1;
-        filter: brightness(1);
+        filter: brightness(1.2);
     }
 }
 
-/* 电击特效 */
-.electric {
-    animation: electricEffect 0.2s ease-in-out infinite;
-}
-
-@keyframes electricEffect {
+/* 横条电击效果 */
+@keyframes electricBar {
     0%, 100% { 
-        filter: drop-shadow(0 0 8px #ffd700) 
-                brightness(1) 
-                hue-rotate(0deg);
+        box-shadow: 
+            0 0 40px rgba(255, 215, 0, 0.5),
+            inset 0 8px 30px rgba(255, 215, 0, 0.3);
     }
     50% { 
-        filter: drop-shadow(0 0 20px #36360f) 
-                brightness(1.4) 
-                hue-rotate(30deg);
+        box-shadow: 
+            0 0 80px rgba(255, 255, 0, 0.8),
+            inset 0 8px 50px rgba(255, 255, 0, 0.6);
     }
 }
     </style>
@@ -644,6 +668,9 @@
     </audio>
     <audio id="heroSound">
         <source src="../背景+音频/捷拉奥拉.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="battleRainSound" loop>
+        <source src="../背景+音频/雷雨.mp3" type="audio/mpeg">
     </audio>
 
     <!-- 黑色遮罩层 -->
@@ -663,12 +690,13 @@
             <div class="mt-4 text-start">
                 <h5>战斗规则：</h5>
                 <ul class="list-unstyled">
-                    <li>⚡<strong>等离子闪电拳</strong>⚡ - 难题 (100伤害)</li>
-                    <li> <strong>波导弹</strong> - 中等题 (80伤害)</li>
-                    <li> <strong>雷电拳</strong> - 简单题 (75伤害)</li>
-                    <li> <strong>电光一闪</strong> - 判断题 (40伤害)</li>
+                    <li> <strong>开始后你的屏幕下方会出现以下技能：</strong> </li>
+                    <li>⚡等离子闪电拳⚡ - 难题 (100伤害)</li>
+                    <li> 波导弹 - 中等题 (80伤害)</li>
+                    <li> 雷电拳 - 简单题 (75伤害)</li>
+                    <li> 电光一闪 - 判断题 (40伤害)</li>
                 </ul>
-                <p class="text-muted">答对题目才能造成伤害，答错则攻击失败！</p>
+                <p class="text-muted"><strong>答对题目才能造成伤害，答错则攻击失败。努力让暴鲤龙冷静下来吧！！</strong></p>
             </div>
             
             <button class="btn btn-danger btn-lg mt-4" id="startBattle">
@@ -758,19 +786,32 @@
     
     <!-- 胜利界面 -->
     <div class="victory-screen" id="victoryScreen">
-        <div class="victory-message">🎉 胜利！ 🎉</div>
-        <p>你成功击败了红色暴鲤龙！</p>
-        <div class="mt-4">
-            <!-- 这里可以放置胜利视频 -->
-            <div style="width: 400px; height: 300px; background: #333; display: flex; align-items: center; justify-content: center; color: white; border: 3px solid #ffd700;">
-                胜利视频播放区域<br>
-                (替换为胜利.mp4)
-            </div>
+    <div class="victory-message">🎉 胜利！ 🎉</div>
+    <p>你成功击败了红色暴鲤龙！</p>
+    <div class="mt-4 victory-video-container">
+        <!-- 本地视频播放器 -->
+        <video id="victoryVideo" class="victory-video" controls preload="none">
+            <source src="" type="video/mp4">
+            您的浏览器不支持视频播放
+        </video>
+        <!-- 视频控制按钮 -->
+        <div class="video-controls">
+            <button class="btn btn-warning btn-sm" id="skipVideo">
+                <i class="fas fa-forward"></i> 跳过视频
+            </button>
+            <button class="btn btn-info btn-sm" id="replayVideo" style="display: none;">
+                <i class="fas fa-redo"></i> 重新播放
+            </button>
         </div>
-        <button class="btn btn-success btn-lg mt-4" onclick="window.location.href='start.html'">
-            <i class="fas fa-home"></i> 返回首页<>
-        </button>
+        <!-- 加载提示 -->
+        <div class="loading-message" id="videoLoading">
+            <i class="fas fa-spinner fa-spin"></i> 准备播放胜利视频...
+        </div>
     </div>
+    <button class="btn btn-success btn-lg mt-4" onclick="window.location.href='../start.html'">
+        <i class="fas fa-home"></i> 返回首页
+    </button>
+</div>
 
     <!-- 捷拉奥拉攻击动画 -->
 <div class="hero-attack" id="heroAttack">
