--- a/Python学习网站第一版/python学习网站/开始/boss.html
+++ b/Python学习网站第一版/python学习网站/开始/boss.html
@@ -691,12 +691,13 @@
                 <h5>战斗规则：</h5>
                 <ul class="list-unstyled">
                     <li> <strong>开始后你的屏幕下方会出现以下技能：</strong> </li>
-                    <li>⚡等离子闪电拳⚡ - 难题 (100伤害)</li>
+                    <li> 等离子闪电拳 - 难题 (100伤害)</li>
                     <li> 波导弹 - 中等题 (80伤害)</li>
                     <li> 雷电拳 - 简单题 (75伤害)</li>
                     <li> 电光一闪 - 判断题 (40伤害)</li>
                 </ul>
                 <p class="text-muted"><strong>答对题目才能造成伤害，答错则攻击失败。努力让暴鲤龙冷静下来吧！！</strong></p>
+                <p class="text-muted"><strong>本页面包含音效以及背景音🔊建议亮度调低音量调高🔊</strong></p>
             </div>
             
             <button class="btn btn-danger btn-lg mt-4" id="startBattle">
