--- a/Python学习网站第二版/python学习网站/about网页/About.html
+++ b/Python学习网站第二版/python学习网站/about网页/About.html
@@ -140,7 +140,7 @@
                     <span>褚</span>
                 </div>
                 <h3 class="member-name">褚一满</h3>
-                <p class="member-role">前后端开发工程师</p>
+                <p class="member-role">前端开发工程师</p>
                 <a href="introduce/intruduce cym.html" class="resume-link">查看简历</a>
             </div>
             
