--- a/Python学习网站第二版/python学习网站/开始/practice.html
+++ b/Python学习网站第二版/python学习网站/开始/practice.html
@@ -71,9 +71,9 @@
     </nav>
 
     <main>
-        <div class="content-card">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 id="practice-title" class="lesson-title">Python练习题库</h1>
+    <div class="content-card">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1 id="practice-title" class="lesson-title">Python练习题库</h1>
                 <div class="btn-group">
                     <button id="prev-question" class="btn btn-outline-primary btn-sm" disabled>
                         <i class="fas fa-arrow-left"></i> 上一题
@@ -83,6 +83,8 @@
                     </button>
                 </div>
             </div>
+        </div>
+       
             
             <div id="chapter-exercises" class="exercises-grid">
                 <!-- 章节练习网格将在这里动态生成 -->
@@ -120,6 +122,14 @@
             </div>
         </div>
     </main>
+
+    <div class="coin-corner" id="coinCorner">
+        <div class="coin-display">
+            <div class="coin-icon">🫥💰</div>
+            <div class="coin-count" id="simpleCoinCount">0</div>
+        </div>
+        <div class="coin-label">金币</div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../开始/book/app.js"></script>
