用户界面，金币

--- a/Python学习网站第二版/python学习网站/menu.html
+++ b/Python学习网站第二版/python学习网站/menu.html
@@ -108,7 +108,7 @@
     
     <div class="menu">
         <ul>
-            <li><a href="" class="btn-retro">客户</a></li>
+            <li><a href="开始\profile\profile.html" class="btn-retro">客户</a></li>
             <li><a href="start.html" class="btn-retro">开始</a></li>
             <li><a href="" class="btn-retro">排名</a></li>
             <li><a href="" class="btn-retro">信封</a></li>
