--- a/Python学习网站第二版/python学习网站/开始/book/index.html
+++ b/Python学习网站第二版/python学习网站/开始/book/index.html
@@ -6,7 +6,7 @@
     <title>Python初学者教程</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="../../css/mouse.css">
 </head>
 <body>
@@ -131,7 +131,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app2.js"></script>
     <script src="../../js/mouse.js"></script>
 </body>
 </html>
