--- a/Python学习网站第二版/python学习网站/开始/profile/profile.html
+++ b/Python学习网站第二版/python学习网站/开始/profile/profile.html
@@ -551,7 +551,7 @@
     <script>
         // 用户数据
         let userData = {
-            username: localStorage.getItem('userProfile_username') || '张三',
+            username: localStorage.getItem('userProfile_username') || '111',
             userId: localStorage.getItem('userProfile_userId') || 'ID_001',
             gender: localStorage.getItem('userProfile_gender') || 'male',
             password: localStorage.getItem('userProfile_password') || '123456',
