--- a/Python学习网站第二版/python学习网站/menu.html
+++ b/Python学习网站第二版/python学习网站/menu.html
@@ -111,6 +111,7 @@
             <li><a href="开始\profile\profile.html" class="btn-retro">用户</a></li>
             <li><a href="start.html" class="btn-retro">开始</a></li>
             <li><a href="抽奖/lottery.html" class="btn-retro">抽奖</a></li>
+            <li><a href="抽奖/chosePet.html" class="btn-retro">选择精灵</a></li>
              <li>
                 <!-- 点击前显示静音图标 -->
                 <img id="speaker" onclick="play_music()" style="width: 40px; height: 40px;" src="背景+音频/音乐.jpg" alt="音乐控制">
