--- a/Python学习网站第二版/python学习网站/开始/book/index.html
+++ b/Python学习网站第二版/python学习网站/开始/book/index.html
@@ -134,5 +134,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app2.js"></script>
     <script src="../../js/mouse.js"></script>
+<script src="../../抽奖/companion.js"></script>
+<script>
+    // 页面加载后显示陪伴精灵
+    document.addEventListener('DOMContentLoaded', function() {
+        setTimeout(() => {
+            if (window.companionSystem && window.companionSystem.settings.showCompanion) {
+                const companion = window.companionSystem.getCurrentCompanion();
+                if (companion) {
+                    window.companionSystem.createCompanionElement();
+                    
+                    // 根据页面显示特定对话
+                    if (window.location.pathname.includes('practice')) {
+                        setTimeout(() => {
+                            window.companionSystem.showSpeech('开始练习吧！我会在这里陪着你！📚', 4000);
+                        }, 1500);
+                    }
+                }
+            }
+        }, 1000);
+    });
+</script>
 </body>
 </html>
