--- a/Python学习网站第二版/python学习网站/抽奖/chosePet.html
+++ b/Python学习网站第二版/python学习网站/抽奖/chosePet.html
@@ -291,7 +291,7 @@
             <div class="current-companion">
                 <h3>当前陪伴精灵</h3>
                 <div class="current-pet-display">
-                    <img id="currentCompanionImg" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/25.gif" alt="当前精灵">
+                    <img id="currentCompanionImg" src="pokemon_gifs/25.gif" alt="当前精灵">
                 </div>
                 <h4 id="currentCompanionName">皮卡丘</h4>
                 <p id="currentCompanionStatus" class="text-success">✓ 正在陪伴你</p>
